// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render facets for developer 1`] = `
Array [
  "Connect(TypeFacet)",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "StandardFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
]
`;

exports[`should render facets for directory 1`] = `
Array [
  "Connect(TypeFacet)",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "StandardFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "TagFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for global page 1`] = `
Array [
  "Connect(TypeFacet)",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "StandardFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for module 1`] = `
Array [
  "Connect(TypeFacet)",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "StandardFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "TagFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets for project 1`] = `
Array [
  "Connect(TypeFacet)",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "StandardFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "TagFacet",
  "DirectoryFacet",
  "FileFacet",
  "AssigneeFacet",
  "AuthorFacet",
]
`;

exports[`should render facets when my issues are selected 1`] = `
Array [
  "Connect(TypeFacet)",
  "SeverityFacet",
  "ResolutionFacet",
  "StatusFacet",
  "StandardFacet",
  "InjectIntl(CreationDateFacet)",
  "Connect(LanguageFacet)",
  "RuleFacet",
  "TagFacet",
  "ProjectFacet",
  "AuthorFacet",
]
`;
